--- a/sim_cam/public/iframes/environment.html
+++ b/sim_cam/public/iframes/environment.html
@@ -95,10 +95,10 @@
     </head>
     <body>
         <div class="container-fluid">
-                <iframe id="main_viewer" src="/iframes/main_viewer.html" allowfullscreen webkitallowfullscreen mozallowfullscreen allowfullscreen webkitallowfullscreen mozallowfullscreen frameborder="0"  id="dof_view" style="height:100%; width:100%; background-color:grey; position:absolute; top:0px; left:0px;">
+                <iframe id="main_viewer" src="/iframes/main_viewer.html" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" frameborder="0"  id="dof_view" style="height:100%; width:100%; position:absolute; top:0px; left:0px;">
                 </iframe>
 
-                <iframe id="camera_viewer" src="/iframes/camera_viewer.html" frameborder="0" style="width: 24.5%; background-color:red; position:absolute; top:0px; right:0px;">
+                <iframe id="camera_viewer"  allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" src="/iframes/camera_viewer.html" frameborder="0" style="width: 24.5%;  position:absolute; top:0px; right:0px;">
                 Not initialized
                 </iframe>
     
