Better style for envir css

--- a/sim_cam/public/iframes/environment.html
+++ b/sim_cam/public/iframes/environment.html
@@ -8,6 +8,14 @@
         body {
             overflow: hidden;
         }
+        .sidebar-nav {
+	min-height: 20px;
+	padding: 19px;
+	margin-bottom: 20px;
+	background-color: #f5f5f5;
+	border: 1px solid #e3e3e3;
+
+	}
         .sidemenu {
             position: absolute;
             right:-240px;
@@ -104,7 +112,7 @@
     
 
         <div class="sidemenu">
-          <div class="well sidebar-nav">
+          <div class="sidebar-nav">
             <div class=" icon-chevron-left" style="margin-left:-22px"></div>
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
