--- a/sim_cam/public/iframes/environment.html
+++ b/sim_cam/public/iframes/environment.html
@@ -111,7 +111,7 @@
                 </iframe>
     
 
-        <div class="sidemenu">
+        <div class="sidemenu" data-toggle="popover" data-placement="left" data-content="This bottom bar will keep a list of your selected images used for final calibration." title="" data-original-title="Bottom Bar for Captured Images" data-trigger="manual">
           <div class="sidebar-nav">
             <div class=" icon-chevron-left" style="margin-left:-22px"></div>
             <ul class="nav nav-list">
@@ -135,7 +135,7 @@
           </div><!--/.well -->
         </div>
             
-            <div class="row-fluid bottom_bar" >
+            <div class="row-fluid bottom_bar" data-toggle="popover" data-placement="top" data-content="This bottom bar will keep a list of your selected images used for final calibration." title="" data-original-title="Bottom Bar for Captured Images" data-trigger="manual">
               <h4 class="span12" style="height:20px;">Captured Images</h4>
               <div class="span12 bottom_bar_image_holder"> 
                 <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
