--- a/sim_cam/public/iframes/camera_viewer.html
+++ b/sim_cam/public/iframes/camera_viewer.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head></head>
-<body style="margin:0px; padding:0px">
-<canvas style="margin:0px; padding:0px; width:100%; height:100%" >
+<body style="margin:0px; padding:0px; overflow:hidden;">
+<canvas style="margin:0px; padding:0px; width:100%; height:100%; " >
 </canvas>
 </body>
 </html>
