--- a/sim_cam/public/iframes/environment.html
+++ b/sim_cam/public/iframes/environment.html
@@ -4,102 +4,100 @@
         <title>SimCAM Environment</title>
         <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen" />
 
-    <style>
-        body {
-            overflow: hidden;
-        }
-        .sidebar-nav {
-	min-height: 20px;
-	padding: 19px;
-	margin-bottom: 20px;
-	background-color: #f5f5f5;
-	border: 1px solid #e3e3e3;
+        <style type="text/css">
+            body {
+                overflow: hidden;
+            }
+            .sidebar-nav {
+                min-height: 20px;
+                padding: 19px;
+                margin-bottom: 20px;
+                background-color: #f5f5f5;
+                border: 1px solid #e3e3e3;
+            }
+            .sidemenu {
+                position: absolute;
+                right:-240px;
+                top:0;
+                width:250px;
+                height:100%;
+                z-index:4;
+                -webkit-transition-property: right;
+                   -moz-transition-property: right;
+                     -o-transition-property: right;
+                        transition-property: right;
+                -webkit-transition-duration: 0.2s;
+                   -moz-transition-duration: 0.2s;
+                     -o-transition-duration: 0.2s;
+                        transition-duration: 0.2s;
+                -webkit-transition-timing-function: ease-in;
+                   -moz-transition-timing-function: ease-in;
+                     -o-transition-timing-function: ease-in;
+                        transition-timing-function: ease-in;            
 
-	}
-        .sidemenu {
-            position: absolute;
-            right:-240px;
-            top:0;
-            width:250px;
-            height:100%;
-            z-index:4;
-        -webkit-transition-property: right;
-           -moz-transition-property: right;
-             -o-transition-property: right;
-                transition-property: right;
-        -webkit-transition-duration: 0.2s;
-           -moz-transition-duration: 0.2s;
-             -o-transition-duration: 0.2s;
-                transition-duration: 0.2s;
-        -webkit-transition-timing-function: ease-in;
-           -moz-transition-timing-function: ease-in;
-             -o-transition-timing-function: ease-in;
-                transition-timing-function: ease-in;            
+            }
+            .sidemenu:hover {
+                right: 0px;
+            }
+            .bottom_bar h4 {
+                color: #444;
+            }
+            .bottom_bar{
+                position: absolute;
+                bottom: -95px;
+                left:0px;
+                right:0px;
+                margin-top: 2px;
+                background: #f1f1f1;
+                border-top: 1px solid #e8e8e8;
+                overflow-x: scroll;
+                height:125px;;
+                white-space:nowrap;
+                -webkit-transition-property: bottom;
+                   -moz-transition-property: bottom;
+                     -o-transition-property: bottom;
+                        transition-property: bottom;
+                -webkit-transition-duration: 0.2s;
+                   -moz-transition-duration: 0.2s;
+                     -o-transition-duration: 0.2s;
+                        transition-duration: 0.2s;
+                -webkit-transition-timing-function: ease-in;
+                   -moz-transition-timing-function: ease-in;
+                     -o-transition-timing-function: ease-in;
+                        transition-timing-function: ease-in;            
 
-        }
-        .sidemenu:hover {
-            right: 0px;
-        }
-        .bottom_bar h4 {
-            color: #444;
-        }
-        .bottom_bar{
-            position: absolute;
-            bottom: -95px;
-            left:0px;
-            right:0px;
-            margin-top: 2px;
-            background: #f1f1f1;
-            border-top: 1px solid #e8e8e8;
-            overflow-x: scroll;
-            height:125px;;
-            white-space:nowrap;
-        -webkit-transition-property: bottom;
-           -moz-transition-property: bottom;
-             -o-transition-property: bottom;
-                transition-property: bottom;
-        -webkit-transition-duration: 0.2s;
-           -moz-transition-duration: 0.2s;
-             -o-transition-duration: 0.2s;
-                transition-duration: 0.2s;
-        -webkit-transition-timing-function: ease-in;
-           -moz-transition-timing-function: ease-in;
-             -o-transition-timing-function: ease-in;
-                transition-timing-function: ease-in;            
+            }
 
-        }
+            .bottom_bar:hover {
+               bottom: 0px;
+            }
 
-        .bottom_bar:hover{
-           bottom: 0px;
-
-
-        }
-        .bottom_bar_img{
-            border:2px solid grey; 
-            background-color: #fff;
-            padding:1px 1px 0px 1px;
-            height: 50px;
-            display: inline;
-        -webkit-transition-property: height;
-           -moz-transition-property: height;
-             -o-transition-property: height;
-                transition-property: height;
-        -webkit-transition-duration: 0.2s;
-           -moz-transition-duration: 0.2s;
-             -o-transition-duration: 0.2s;
-                transition-duration: 0.2s;
-        -webkit-transition-timing-function: ease-in;
-           -moz-transition-timing-function: ease-in;
-             -o-transition-timing-function: ease-in;
-                transition-timing-function: ease-in;            
-        }
-        .bottom_bar_img_holder {
-            height: 60px;
-        }
-        .bottom_bar_img:hover {
-            height: 55px;
-         }
-    </style>
+            .bottom_bar_img{
+                border:2px solid grey; 
+                background-color: #fff;
+                padding:1px 1px 0px 1px;
+                height: 50px;
+                display: inline;
+                -webkit-transition-property: height;
+                   -moz-transition-property: height;
+                     -o-transition-property: height;
+                        transition-property: height;
+                -webkit-transition-duration: 0.2s;
+                   -moz-transition-duration: 0.2s;
+                     -o-transition-duration: 0.2s;
+                        transition-duration: 0.2s;
+                -webkit-transition-timing-function: ease-in;
+                   -moz-transition-timing-function: ease-in;
+                     -o-transition-timing-function: ease-in;
+                        transition-timing-function: ease-in;            
+            }
+            .bottom_bar_img_holder {
+                height: 60px;
+            }
+            .bottom_bar_img:hover {
+                height: 55px;
+             }
+        </style>
     </head>
     <body>
         <div class="container-fluid">
