--- a/sim_cam/public/iframes/main_viewer.html
+++ b/sim_cam/public/iframes/main_viewer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head></head>
-<body style="margin:0px; padding:0px">
+<body style="margin:0px; padding:0px; overflow:hidden;">
 <canvas style="margin:0px; padding:0px; width:100%; height:100%" >
 </canvas>
 </body>
