--- a/sim_cam/public/iframes/environment.html
+++ b/sim_cam/public/iframes/environment.html
@@ -109,10 +109,10 @@
                 </iframe>
     
 
-        <div class="sidemenu" data-toggle="popover" data-placement="left" data-content="This bottom bar will keep a list of your selected images used for final calibration." title="" data-original-title="Bottom Bar for Captured Images" data-trigger="manual">
+        <div class="sidemenu" data-toggle="popover" data-placement="left" data-content="Adjust parameters in this menu. Hover over it to open it. <input type='button' class='close_popover btn' value='close'/>" title="" data-original-title="SideMenu" data-trigger="manual">
           <div class="sidebar-nav">
             <div class=" icon-chevron-left" style="margin-left:-22px"></div>
-            <ul class="nav nav-list">
+            <ul class="nav nav-list body">
               <li class="nav-header">Sidebar</li>
               <li class="active"><a href="#">Link</a></li>
               <li><a href="#">Link</a></li>
@@ -133,7 +133,7 @@
           </div><!--/.well -->
         </div>
             
-            <div class="row-fluid bottom_bar" data-toggle="popover" data-placement="top" data-content="This bottom bar will keep a list of your selected images used for final calibration." title="" data-original-title="Bottom Bar for Captured Images" data-trigger="manual">
+            <div class="row-fluid bottom_bar" data-toggle="popover" data-placement="top" data-content="This bottom bar will keep a list of your selected images used for final calibration. <input type='button' class='close_popover btn' value='close'/> " title="" data-original-title="Bottom Bar for Captured Images" data-trigger="manual">
               <h4 class="span12" style="height:20px;">Captured Images</h4>
               <div class="span12 bottom_bar_image_holder"> 
                 <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
