Showing 3D with jslint problems

--- a/sim_cam/public/foo.html
+++ b/sim_cam/public/foo.html
@@ -10,7 +10,7 @@
         <script src="/js/libs/underscore-min.js"></script>
         <script src="/js/libs/backbone-min.js"></script>
         <script src="/js/libs/bootstrap.min.js"></script> 
-        <script src="/js/libs/Three.js"></script> 
+        <script src="/js/libs/three.js"></script> 
 
         <script src="/js/environment.js"></script> 
 
