--- a/sim_cam/public/foo.html
+++ b/sim_cam/public/foo.html
@@ -18,8 +18,7 @@
 
             var simcam = SimCam.initialize({ element: $('#environment'), 
                                          mode: { 
-                                               type: 'pinhole', 
-                                               learning_environment: true 
+                                               type: 'pinhole' 
                                             }
                                        });
 
