--- a/sim_cam/public/iframes/environment.html
+++ b/sim_cam/public/iframes/environment.html
@@ -104,7 +104,7 @@
                 <iframe id="main_viewer" src="/iframes/main_viewer.html" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" frameborder="0"  id="dof_view" style="height:100%; width:100%; position:absolute; top:0px; left:0px;">
                 </iframe>
 
-                <iframe id="camera_viewer"  allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" src="/iframes/camera_viewer.html" frameborder="0" style="width: 200px;  position:absolute; top:0px; left:0px; border: 2px solid #ccc" data-toggle="popover" data-title="Camera View" data-content="See the camera view here. <input type='button' class='close_popover btn' value='close' />" data-placement="left">
+                <iframe id="camera_viewer"  allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" src="/iframes/camera_viewer.html" frameborder="0" style="width: 200px; height: 200px;  position:absolute; top:0px; left:0px; border: 2px solid #ccc" data-toggle="popover" data-title="Camera View" data-content="See the camera view here. <input type='button' class='close_popover btn' value='close' />" data-placement="left">
                 Not initialized
                 </iframe>
     
