--- a/sim_cam/public/tests/pinhole.html
+++ b/sim_cam/public/tests/pinhole.html
@@ -12,7 +12,7 @@
         <script src="/js/libs/bootstrap.min.js"></script> 
         <script src="/js/libs/three.js"></script> 
 
-        <script src="/js/environment.min.js"></script> 
+        <script src="/js/environment.js"></script> 
 
         <script>
 
