--- a/sim_cam/public/iframes/environment.html
+++ b/sim_cam/public/iframes/environment.html
@@ -75,27 +75,14 @@
             .bottom_bar_img{
                 border:2px solid grey; 
                 background-color: #fff;
-                padding:1px 1px 0px 1px;
                 height: 50px;
                 display: inline;
-                -webkit-transition-property: height;
-                   -moz-transition-property: height;
-                     -o-transition-property: height;
-                        transition-property: height;
-                -webkit-transition-duration: 0.2s;
-                   -moz-transition-duration: 0.2s;
-                     -o-transition-duration: 0.2s;
-                        transition-duration: 0.2s;
-                -webkit-transition-timing-function: ease-in;
-                   -moz-transition-timing-function: ease-in;
-                     -o-transition-timing-function: ease-in;
-                        transition-timing-function: ease-in;            
             }
             .bottom_bar_img_holder {
                 height: 60px;
             }
             .bottom_bar_img:hover {
-                height: 55px;
+                border:2px solid orange;
              }
         </style>
     </head>
@@ -134,7 +121,7 @@
         </div>
             
             <div class="row-fluid bottom_bar" data-toggle="popover" data-placement="top" data-content="This bottom bar will keep a list of your selected images used for final calibration. <input type='button' class='close_popover btn' value='close'/> " title="" data-original-title="Bottom Bar for Captured Images" data-trigger="manual">
-              <h4 class="span12" style="height:20px;">Captured Images</h4>
+              <h4 class="span12" style="height:20px;">Captured Images (<span class="captured_count">0</span>)</h4>
               <div class="span12 bottom_bar_image_holder"> 
                 <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
               </div> 
