Fixed the stuff up

--- a/sim_cam/public/iframes/environment.html
+++ b/sim_cam/public/iframes/environment.html
@@ -88,7 +88,7 @@
     </head>
     <body>
         <div class="container-fluid">
-                <iframe id="main_viewer" src="/iframes/main_viewer.html" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" frameborder="0"  id="dof_view" style="height:100%; width:100%; position:absolute; top:0px; left:0px;">
+                <iframe id="main_viewer" src="/iframes/main_viewer.html" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" frameborder="0"  id="dof_view" style="height:100%; width:100%; position:absolute; top:0px; left:0px; bottom:0px; right:0px;">
                 </iframe>
 
                 <iframe id="camera_viewer"  allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" src="/iframes/camera_viewer.html" frameborder="0" style="width: 200px; height: 200px;  position:absolute; top:0px; left:0px; border: 2px solid #ccc" data-toggle="popover" data-title="Camera View" data-content="See the camera view here. <input type='button' class='close_popover btn' value='close' />" data-placement="left">
@@ -123,7 +123,6 @@
             <div class="row-fluid bottom_bar" data-toggle="popover" data-placement="top" data-content="This bottom bar will keep a list of your selected images used for final calibration. <input type='button' class='close_popover btn' value='close'/> " title="" data-original-title="Bottom Bar for Captured Images" data-trigger="manual">
               <h4 class="span12" style="height:20px;">Captured Images (<span class="captured_count">0</span>)</h4>
               <div class="span12 bottom_bar_image_holder"> 
-                <img src="/uploads/b76b801e290e31483f80106331b04f8b587584da_in.png" class="bottom_bar_img" />
               </div> 
             </div>
         </div>
