Made height automagic

--- a/sim_cam/public/tests/calibration.html
+++ b/sim_cam/public/tests/calibration.html
@@ -6,7 +6,7 @@
 
     </head>
     <body>
-        <div id="environment">
+        <div id="environment" height="100%">
         </div>
         <script src="/js/libs/jquery-1.9.1.min.js"></script>
         <script src="/js/libs/underscore-min.js"></script>
@@ -17,7 +17,6 @@
         <script src="/js/environment.js"></script> 
 
         <script>
-
             var simcam = SimCam.initialize({ element: $('#environment'), 
                                          mode: { 
                                                type: 'calibration' 
