Added new sessions templates

--- a/sim_cam/public/tests/pinhole.html
+++ b/sim_cam/public/tests/pinhole.html
@@ -19,7 +19,10 @@
             var simcam = SimCam.initialize({ element: $('#environment'), 
                                          mode: { 
                                                type: 'pinhole' 
-                                            }
+                                            },
+                                         success: function(app) {
+                                             window.simcam = app;
+                                         }
                                        });
 
         </script>
