Fixed the efficacy

--- a/sim_cam/public/tests/distortions.html
+++ b/sim_cam/public/tests/distortions.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title>SimCAM Environment</title>
+
+            <link rel="stylesheet" type="text/css" media="screen" href="/css/messenger.css">
+            <link rel="stylesheet" type="text/css" media="screen" href="/css/messenger-theme-future.css">
+
     </head>
     <body>
         <div id="environment">
@@ -11,8 +15,8 @@
         <script src="/js/libs/backbone-min.js"></script>
         <script src="/js/libs/bootstrap.min.js"></script> 
         <script src="/js/libs/three.js"></script> 
-
-        <script src="https://raw.github.com/danguer/blog-examples/master/js/base64-binary.js"></script>
+        <script src="/js/messenger.js"></script> 
+        <script src="/js/messenger-theme-future.js"></script>
 
         <script src="/js/environment.js"></script> 
 
