--- a/sim_cam/public/tests/pinhole.html
+++ b/sim_cam/public/tests/pinhole.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>SimCAM Environment</title>
+            <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen" />
+
+            <link rel="stylesheet" type="text/css" media="screen" href="/css/messenger.css">
+            <link rel="stylesheet" type="text/css" media="screen" href="/css/messenger-theme-future.css">
+
     </head>
     <body>
         <div id="environment">
@@ -11,6 +16,9 @@
         <script src="/js/libs/backbone-min.js"></script>
         <script src="/js/libs/bootstrap.min.js"></script> 
         <script src="/js/libs/three.js"></script> 
+        <script src="/js/messenger.js"></script> 
+        <script src="/js/messenger-theme-future.js"></script>
+
 
         <script src="/js/environment.js"></script> 
 
