Added widget to edit positions and rotations a bit better

--- a/sim_cam/public/iframes/environment.html
+++ b/sim_cam/public/iframes/environment.html
@@ -43,6 +43,7 @@
                 color: #444;
             }
             .bottom_bar{
+                z-index:20;
                 position: absolute;
                 bottom: -95px;
                 left:0px;
